--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.1.7
 django-heroku==0.0.0
 filelock==3.0.12
 gunicorn==20.0.4
+psycopg2-binary==2.8.6
 pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
